<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.digitnexus</groupId>
	<artifactId>digitn</artifactId>
	<version>SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>digitn</name>
	<description>Parent project for all digitn platform modules</description>
	<inceptionYear>2011</inceptionYear>
	<organization>
		<name>Digit Nexus</name>
		<url>http://digitnexus.com/</url>
	</organization>
	<properties>
		<jersey-version>1.8</jersey-version>
		<spring-version>3.1.3.RELEASE</spring-version>
		<spring-mongodb-version>1.1.0.M1</spring-mongodb-version>
		<jibx-version>1.2.3</jibx-version>
		<quartz-version>2.1.6</quartz-version>
		<parent-basedir>${project.parent.basedir}</parent-basedir>
		<qualityRules>${parent-basedir}/quality</qualityRules>
		<project-info-plugin-version>2.4</project-info-plugin-version>
		<checkstyle-plugin-version>2.7</checkstyle-plugin-version>
		<pmd-plugin-version>2.5</pmd-plugin-version>
		<findbugs-plugin-version>2.3.2</findbugs-plugin-version>
		<cobertura-plugin-version>2.5.2</cobertura-plugin-version>
		<surefire-plugin-version>2.10</surefire-plugin-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<site-plugin-version>3.0</site-plugin-version>
		<compiler-plugin-version>2.3.2</compiler-plugin-version>
		<jxr-plugin-version>2.3</jxr-plugin-version>
		<aspectj-version>1.6.12</aspectj-version>
		<hibernate-version>4.0.1.Final</hibernate-version>
		<activiti-version>5.8</activiti-version>
		<testng-version>6.7</testng-version>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler-plugin-version}</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
						<encoding>UTF-8</encoding>
						<showWarnings>true</showWarnings>
						<showDeprecation>true</showDeprecation>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>2.2</version>
					<configuration>
						<attachClasses>true</attachClasses>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jibx</groupId>
					<artifactId>jibx-maven-plugin</artifactId>
					<version>${jibx-version}</version>
					<dependencies>
						<dependency>
							<groupId>org.jibx</groupId>
							<artifactId>jibx-bind</artifactId>
							<version>${jibx-version}</version>
						</dependency>
						<dependency>
							<groupId>org.jibx</groupId>
							<artifactId>jibx-run</artifactId>
							<version>${jibx-version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jxr-plugin</artifactId>
					<version>${jxr-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>${surefire-plugin-version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${surefire-plugin-version}</version>
					<configuration>
						<skipTests>true</skipTests>
						<argLine>-Xmx512m -XX:MaxPermSize=512m</argLine>
						<groups>unit</groups>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>
	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.jboss.spec</groupId>
				<artifactId>jboss-javaee-6.0</artifactId>
				<version>2.0.0.Final</version>
				<type>pom</type>
				<scope>provided</scope>
				<exclusions>
					<exclusion>
						<groupId>javax.validation</groupId>
						<artifactId>validation-api</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>com.oracle</groupId>
				<artifactId>ojdbc6</artifactId>
				<version>11.2.0.2.0</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging</artifactId>
				<version>1.1.1</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
			</dependency>
			<dependency>
				<groupId>javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>3.9.0.GA</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-core</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context-support</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-web</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-tx</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-orm</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jms</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-core</artifactId>
				<version>${hibernate-version}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.transaction</groupId>
						<artifactId>jta</artifactId>
					</exclusion>
					<exclusion>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
					</exclusion>
					<exclusion>
						<groupId>antlr</groupId>
						<artifactId>antlr</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-envers</artifactId>
				<version>${hibernate-version}</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-ehcache</artifactId>
				<version>${hibernate-version}</version>
				<exclusions>
					<exclusion>
						<groupId>net.sf.ehcache</groupId>
						<artifactId>ehcache</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache-core</artifactId>
				<version>2.6.2</version>
			</dependency>
			<dependency>
				<groupId>net.sf.ehcache</groupId>
				<artifactId>ehcache-jgroupsreplication</artifactId>
				<version>1.7</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-simple</artifactId>
				<version>1.6.1</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-core</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-web</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-aspects</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-cas</artifactId>
				<version>${spring-version}</version>
			</dependency>
			<dependency>
				<groupId>javax.jms</groupId>
				<artifactId>jms</artifactId>
				<version>1.1</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.sun.jersey</groupId>
				<artifactId>jersey-server</artifactId>
				<version>${jersey-version}</version>
			</dependency>
			<dependency>
				<groupId>com.sun.jersey</groupId>
				<artifactId>jersey-json</artifactId>
				<version>${jersey-version}</version>
				<exclusions>
					<exclusion>
						<groupId>javax.xml.bind</groupId>
						<artifactId>jaxb-api</artifactId>
					</exclusion>
					<exclusion>
						<groupId>com.sun.xml.bind</groupId>
						<artifactId>jaxb-impl</artifactId>
					</exclusion>
					<exclusion>
						<artifactId>stax-api</artifactId>
						<groupId>stax</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.sun.jersey.contribs</groupId>
				<artifactId>jersey-spring</artifactId>
				<version>${jersey-version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-core</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-beans</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-context</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-web</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.springframework</groupId>
						<artifactId>spring-aop</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

		
			<!--Test dependencies -->
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-test</artifactId>
				<version>${spring-version}</version>
				<scope>test</scope>
			</dependency>

			<dependency>
				<groupId>dumbster</groupId>
				<artifactId>dumbster</artifactId>
				<version>1.6</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<artifactId>activation</artifactId>
						<groupId>javax.activation</groupId>
					</exclusion>
				</exclusions>
			</dependency>

			<dependency>
				<groupId>org.testng</groupId>
				<artifactId>testng</artifactId>
				<version>${testng-version}</version>
				<scope>test</scope>
				<exclusions>
					<exclusion>
						<artifactId>junit</artifactId>
						<groupId>junit</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>commons-dbcp</groupId>
				<artifactId>commons-dbcp</artifactId>
				<version>1.4</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>3.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>1.7.1</version>
			</dependency>
			<dependency>
				<groupId>org.antlr</groupId>
				<artifactId>antlr</artifactId>
				<version>3.4-beta3</version>
			</dependency>
			<dependency>
				<groupId>org.jibx</groupId>
				<artifactId>jibx-bind</artifactId>
				<version>${jibx-version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.jibx</groupId>
				<artifactId>jibx-run</artifactId>
				<version>${jibx-version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>r09</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz</artifactId>
				<version>${quartz-version}</version>
				<exclusions>
					<exclusion>
						<artifactId>jta</artifactId>
						<groupId>javax.transaction</groupId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz-oracle</artifactId>
				<version>${quartz-version}</version>
			</dependency>
			<dependency>
				<groupId>org.quartz-scheduler</groupId>
				<artifactId>quartz-jboss</artifactId>
				<version>${quartz-version}</version>
			</dependency>
			<dependency>
				<groupId>javax.inject</groupId>
				<artifactId>javax.inject</artifactId>
				<version>1</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>2.3.18</version>
			</dependency>
			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>4.2.0.Final</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjrt</artifactId>
				<version>${aspectj-version}</version>
			</dependency>
			<dependency>
				<groupId>org.aspectj</groupId>
				<artifactId>aspectjweaver</artifactId>
				<version>${aspectj-version}</version>
			</dependency>

		</dependencies>

	</dependencyManagement>
	<!--  repositories>
		<repository>
			<id>jboss</id>
			<url>http://repository.jboss.org/nexus/content/groups/public-jboss/</url>
		</repository>
		<repository>
			<id>m2.java.net</id>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
		    <id>spring-release</id>
		    <name>Spring Maven Release Repository</name>
		    <url>http://repo.springsource.org/libs-release</url>
		</repository>
	</repositories>
	-->
	<modules>
		<module>core</module>
		<module>common-services</module>
		<module>web</module>
	</modules>

	<distributionManagement>
		<downloadUrl>http://digitn.com</downloadUrl>
		<site>
			<id>digitn.platform.site</id>
			<name>DigitN Platform</name>
			<url>scp://localhost/</url>
		</site>
	</distributionManagement>
</project>